traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:13: error: not found: value setPose
      setPose(getX(),getY()+1)
      ^TraversalZigZag:17: error: not found: value setPose
      setPose(getX(),getY()+1)
      ^TraversalZigZag:20: error: type mismatch;
 found   : Unit
 required: Boolean
      for(k<- 1 to 6){
           ^