traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  
    def positionFinale():Boolean={
    var c=0
    if ((c<=0 && c>6) || (c<=14 && c>20)  || (c<=28 && c>34) ||(c<=42 && c>48)){
      for(k<- 1 to 6){
        writeMessage(c)
        setPos(getX()+1,getY())
        c=c+1
      }
    }
    if (c==6 || c== 20 || c==34 || c==48){
      writeMessage(c)
      setPose(getX(),getY()+1)
    }
    if (c==0 || c== 13 || c==27 || c==41){
      writeMessage(c)
      setPose(getX(),getY()+1)
    }
    else{
      for(k<- 1 to 6){
      setPos(getX()-1,getY())
        c=c+1
      }
    }
    }
  
positionFinale()
}